--- a/src/Components/Hero/index.css
+++ b/src/Components/Hero/index.css
@@ -15,9 +15,13 @@
     width: 100vw;
     height: 100vh;
     min-height: 48rem;
-    padding-top: 16.9rem;
+    padding-top: 32.9rem;
     position: relative;
     background: url(../../../assets/bg.jpg) center / cover;
+
+    @media (--mobile) {
+        padding-top: 16.9rem;
+    }
 
     @media (--tablet) {
         padding-top: 11rem;
